crates/vm/src/snapshots/mu_vm__tests__fn_call-4.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
fn f(a, *rest):
  print a, rest

f(0)
f(0, 1, 2)


# Result (success):
none

# Stdout:
0 []
0 [1, 2]

