crates/vm/src/snapshots/mu_vm__tests__fn_call.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
fn f():
  print "test"

f()
f()


# Result (success):
none

# Stdout:
"test"
"test"

