crates/vm/src/snapshots/mu_vm__tests__fn_call_default-2.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
fn f(a, b=10):
  print a, b

f(1)
f(1,2)


# Result (success):
none

# Stdout:
1 10
1 2

