crates/vm/src/snapshots/mu_vm__tests__fn_call_default-4.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
fn f(a, b=10):
  print a

f(1,2,3)


# Result (error):
[31merror[0m in code: expected at most 2 args, got 3


# Stdout:

