crates/vm/src/snapshots/mu_vm__tests__fn_call_default-5.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
fn f(a, b=10):
  print a

f()


# Result (error):
[31merror[0m in code: missing required positional params: a


# Stdout:

