crates/vm/src/snapshots/mu_vm__tests__fn_call_default-6.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
fn f(a, b=10, *c):
  print a, b, c

f(1)
f(1,2)
f(1,2,3)


# Result (success):
none

# Stdout:
1 10 []
1 2 []
1 2 [3]

