crates/vm/src/snapshots/mu_vm__tests__fn_call_default.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
fn f(a=10):
  print a

f()
f(1)


# Result (success):
none

# Stdout:
10
1

