crates/vm/src/snapshots/mu_vm__tests__fn_call_kw-2.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
fn f(*, a, b):
  print a, b

f(a=1, b=2)
f(b=2, a=1)


# Result (success):
none

# Stdout:
1 2
1 2

