crates/vm/src/snapshots/mu_vm__tests__fn_call_kw-3.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
fn f(*, a, b=10):
  print a, b

f(a=1)
f(a=1, b=2)


# Result (success):
none

# Stdout:
1 10
1 2

