crates/vm/src/snapshots/mu_vm__tests__fn_call_kw-5.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
fn f(*, a, b=10, **kw):
  print a, b, kw

f(a=1, c=3)
f(c=3, a=1)
f(a=1, b=2, c=3)
f(c=3, b=2, a=1)


# Result (success):
none

# Stdout:
1 10 {"c": 3}
1 10 {"c": 3}
1 2 {"c": 3}
1 2 {"c": 3}

